--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,10 @@
     <string name="action_settings">Settings</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="menu_1">Report bug</string>
-    <string name="searchable"> Search </string>
-    <string name="menu_search">Search</string>
-    <string name = "menu_2">Log out</string>
+    <string name="settings"> Edit profile</string>
+    <string name="contacts"> Contacts</string>
+    <string name="report_bug">Report bug</string>
+    <string name="log_out"> Log out</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
+
