--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="report_bug">Report bug</string>
     <string name="log_out"> Log out</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_pager">PagerActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
 
